--- a/projects/urlParser/package.json
+++ b/projects/urlParser/package.json
@@ -2,16 +2,19 @@
   "name": "urlparser",
   "version": "1.0.0",
   "description": "",
-  "main": "urlParser.test.js",
-  "type": "module",
+  "main": "urlParser.test.ts",
   "scripts": {
-    "test": "set NODE_OPTIONS=--experimental-vm-modules && jest",
-    "test:coverage": "set NODE_OPTIONS=--experimental-vm-modules && jest --coverage"
+    "test": "jest",
+    "test:coverage": "jest --coverage"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "jest": "^29.3.1"
+    "@types/jest": "^29.4.0",
+    "jest": "^29.3.1",
+    "ts-jest": "^29.0.5",
+    "ts-node": "^10.9.1",
+    "typescript": "^4.9.4"
   }
 }
